--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -133,6 +133,19 @@
      <string>Piloter</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="camera_button">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>170</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>camera</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
