--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -78,7 +78,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>right</string>
+     <string>→</string>
     </property>
    </widget>
    <widget class="QPushButton" name="button_left">
@@ -91,7 +91,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>left</string>
+     <string>←</string>
     </property>
    </widget>
    <widget class="QPushButton" name="button_up">
@@ -104,7 +104,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>up</string>
+     <string>↑</string>
     </property>
    </widget>
    <widget class="QPushButton" name="button_back">
@@ -117,7 +117,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>back</string>
+     <string>↓</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -238,6 +238,58 @@
     </property>
     <property name="text">
      <string>down</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_dr">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>140</y>
+      <width>41</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>↘</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_ur">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>80</y>
+      <width>41</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>↗</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_dl">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>41</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>↙</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_ul">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>80</y>
+      <width>41</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>↖</string>
     </property>
    </widget>
   </widget>
