--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -22,11 +22,18 @@
     <height>500</height>
    </size>
   </property>
+  <property name="cursor">
+   <cursorShape>UpArrowCursor</cursorShape>
+  </property>
   <property name="contextMenuPolicy">
    <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="windowTitle">
    <string>WiFi Bot</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/icon.ico</normaloff>:/icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="robotIPPort">
@@ -250,16 +257,54 @@
      <string>↖</string>
     </property>
    </widget>
-   <widget class="QWidget" name="gridLayoutWidget">
+   <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>70</y>
-      <width>311</width>
-      <height>211</height>
+      <y>60</y>
+      <width>310</width>
+      <height>240</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>310</width>
+      <height>240</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>310</width>
+      <height>240</height>
+     </size>
+    </property>
     <layout class="QGridLayout" name="videoContainer"/>
+   </widget>
+   <widget class="QPushButton" name="camera_resetV">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>200</y>
+      <width>81</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset V</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="camera_resetH">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>200</y>
+      <width>81</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset H</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -295,6 +340,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
