--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -306,23 +306,72 @@
      <string>Reset H</string>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider">
+   <widget class="QLabel" name="Bat">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>310</y>
-      <width>160</width>
-      <height>22</height>
+      <x>450</x>
+      <y>340</y>
+      <width>111</width>
+      <height>21</height>
      </rect>
     </property>
-    <property name="minimum">
-     <number>70</number>
+    <property name="text">
+     <string>Bat : </string>
     </property>
-    <property name="maximum">
-     <number>100</number>
+   </widget>
+   <widget class="QProgressBar" name="progressBarInfAG">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>60</y>
+      <width>31</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
     </property>
     <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="infG">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>320</y>
+      <width>60</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>infG :</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="infD">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>320</y>
+      <width>60</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>infD :</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>340</y>
+      <width>118</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
     </property>
    </widget>
   </widget>
@@ -351,7 +400,6 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionChange_IPv4">
    <property name="text">
     <string>Change IPv4...</string>
