--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>400</height>
+    <height>405</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -31,10 +31,6 @@
   <property name="windowTitle">
    <string>WiFi Bot</string>
   </property>
-  <property name="windowIcon">
-   <iconset resource="resources.qrc">
-    <normaloff>:/icon.ico</normaloff>:/icon.ico</iconset>
-  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="robotIPPort">
     <property name="geometry">
@@ -54,8 +50,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>381</width>
-      <height>32</height>
+      <width>361</width>
+      <height>41</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -78,8 +74,8 @@
    <widget class="QPushButton" name="button_right">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>110</y>
+      <x>110</x>
+      <y>120</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -91,8 +87,8 @@
    <widget class="QPushButton" name="button_left">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>110</y>
+      <x>30</x>
+      <y>120</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -104,8 +100,8 @@
    <widget class="QPushButton" name="button_up">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>80</y>
+      <x>70</x>
+      <y>90</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -117,8 +113,8 @@
    <widget class="QPushButton" name="button_back">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>140</y>
+      <x>70</x>
+      <y>150</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -130,8 +126,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>60</y>
+      <x>50</x>
+      <y>70</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -208,8 +204,8 @@
    <widget class="QPushButton" name="button_dr">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>140</y>
+      <x>110</x>
+      <y>150</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -221,8 +217,8 @@
    <widget class="QPushButton" name="button_ur">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>80</y>
+      <x>110</x>
+      <y>90</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -234,8 +230,8 @@
    <widget class="QPushButton" name="button_dl">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>140</y>
+      <x>30</x>
+      <y>150</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -247,8 +243,8 @@
    <widget class="QPushButton" name="button_ul">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
+      <x>30</x>
+      <y>90</y>
       <width>41</width>
       <height>32</height>
      </rect>
@@ -280,31 +276,180 @@
     </property>
     <layout class="QGridLayout" name="videoContainer"/>
    </widget>
-   <widget class="QPushButton" name="camera_resetV">
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>200</y>
-      <width>81</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Reset V</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="camera_resetH">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>550</x>
       <y>200</y>
-      <width>81</width>
+      <width>101</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Reset H</string>
+     <string>Reset cam</string>
     </property>
+   </widget>
+   <widget class="QSlider" name="horizontalSlider">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>220</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>70</number>
+    </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>200</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SPEED (1-100)</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="horizontalLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>340</y>
+      <width>691</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>10</width>
+         <height>10</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="infG">
+       <property name="text">
+        <string>Infra G</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="infD">
+       <property name="text">
+        <string>Infra D</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="Bat">
+       <property name="text">
+        <string>Battery</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="value">
+        <number>24</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>240</y>
+      <width>199</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QCheckBox" name="blurBox">
+         <property name="text">
+          <string>Blur</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="negaBox">
+         <property name="text">
+          <string>Nega</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <item>
+        <widget class="QCheckBox" name="hueBox">
+         <property name="text">
+          <string>Hue</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="grayBox">
+         <property name="text">
+          <string>Gray</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -332,7 +477,6 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionChange_IPv4">
    <property name="text">
     <string>Change IPv4...</string>
@@ -340,8 +484,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
