--- a/wifibotKevinBaptiste/mainwindow.ui
+++ b/wifibotKevinBaptiste/mainwindow.ui
@@ -350,7 +350,7 @@
      <item>
       <widget class="QLabel" name="infG">
        <property name="text">
-        <string>Infra G</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -370,7 +370,7 @@
      <item>
       <widget class="QLabel" name="infD">
        <property name="text">
-        <string>Infra D</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -390,7 +390,7 @@
      <item>
       <widget class="QLabel" name="Bat">
        <property name="text">
-        <string>Battery</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -450,6 +450,19 @@
       </layout>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="downloadButton">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>300</y>
+      <width>131</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save Image</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
